WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
169404
Fix DataInteraction guards
https://bugs.webkit.org/show_bug.cgi?id=169404
Summary
Fix DataInteraction guards
Megan Gardner
Reported
2017-03-08 21:22:56 PST
Fix DataInteraction guards
Attachments
Patch
(1.99 KB, patch)
2017-03-08 21:23 PST
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
Patch
(1.98 KB, patch)
2017-03-09 10:12 PST
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
Patch
(1.50 KB, patch)
2017-03-09 10:34 PST
,
Megan Gardner
wenson_hsieh
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Megan Gardner
Comment 1
2017-03-08 21:23:17 PST
Created
attachment 303895
[details]
Patch
Megan Gardner
Comment 2
2017-03-09 10:12:12 PST
Created
attachment 303930
[details]
Patch
Wenson Hsieh
Comment 3
2017-03-09 10:25:40 PST
Comment on
attachment 303930
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=303930&action=review
> Source/WebKit/mac/WebCoreSupport/WebDragClient.mm:217 > +#endif
Does this #endif here correspond to the #if PLATFORM(MAC) above? This looks like it might cause WebDragClient::declareAndWriteAttachment to be implemented twice.
Megan Gardner
Comment 4
2017-03-09 10:34:29 PST
Created
attachment 303935
[details]
Patch
Wenson Hsieh
Comment 5
2017-03-09 10:36:08 PST
Comment on
attachment 303935
[details]
Patch r=mews
Megan Gardner
Comment 6
2017-03-09 13:20:00 PST
https://trac.webkit.org/r213660
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug