Fix DataInteraction guards https://bugs.webkit.org/show_bug.cgi?id=169404

Reviewed by Wenson Hsieh.

* WebCoreSupport/WebDragClient.mm:



Canonical link: https://commits.webkit.org/186417@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213660 268f45cc-cd09-0410-ab3c-d52691b4dbfc